# ai-anonymity-checker

./: README.md  pyproject.toml
anonymization_checker/: __init__.py  checker.py  cli.py  config.py  web.py
anonymization_checker/extractors/: __init__.py  latex_extractor.py  pdf_extractor.py
anonymization_checker/llm/: __init__.py  base.py  factory.py
